syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-shopping-list/api/proto/v1";

message DeclineShoppingListInviteRequest {
  string userId = 1;
  string shoppingListId = 2;
}

message DeclineShoppingListInviteResponse {
  string message = 1;
}
