syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-shopping-list/api/proto/v1";

message InviteUserToShoppingListRequest {
  string requesterId = 1;
  string shoppingListId = 2;
  string userId = 3;
  string subscriptionPlan = 4;
}

message InviteUserToShoppingListResponse {
  string message = 1;
}
